--- a/.gitignore
+++ b/.gitignore
@@ -1,94 +1,39 @@
-# ============== 操作系统自动生成文件 ==============
-# macOS
-.DS_Store
-.AppleDouble
-.Spotlight-V100
-.Trashes
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-
-# Linux
-.directory
-*~
-
-# ============== 编译与构建产物 ==============
-# Java
-*.class
-*.jar
-*.war
-*.ear
-/target/      # Maven/Gradle 构建目录
-
-# C/C++
-*.o
-*.obj
-*.exe
-*.out
-/build/       # CMake/Make 构建目录
-
-# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.pytest_cache/
-
-# JavaScript/Node.js
-dist/         # 打包输出目录
-build/        # 构建中间文件
-*.js.map
-*.css.map
-
-# ============== IDE/编辑器配置文件 ==============
-# Visual Studio Code
-.vscode/
-!.vscode/settings.json # 例外：保留必要配置
-!.vscode/tasks.json
-!.vscode/launch.json
-
-# IntelliJ IDEA
-.idea/
-*.iml
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+.idea/*
 *.iws
+*.iml
 *.ipr
 
-# Eclipse
+### Eclipse ###
+.apt_generated
 .classpath
+.factorypath
 .project
-.settings/
-/bin/
-/tmp/
+.settings
+.springBeans
+.sts4-cache
 
-# ============== 依赖管理目录 ==============
-node_modules/  # Node.js 依赖
-venv/          # Python 虚拟环境
-env/           # 环境目录
-.vendor/       # Ruby/PHP 依赖
-.venv/         # Python 虚拟环境（替代名）
-/packages/     # NuGet/其他包目录
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# ============== 日志与临时文件 ==============
-*.log          # 所有日志文件
-*.tmp          # 临时文件
-*.swp          # Vim 交换文件
-*.swo          # Vim 备份文件
-.cache/        # 缓存目录
-npm-debug.log*
-yarn-error.log*
+### VS Code ###
+.vscode/
 
-# ============== 敏感信息与配置文件 ==============
-.env           # 环境变量（含密钥）
-*.key          # 证书/密钥文件
-config.yml     # 本地配置
-secrets.json   # 敏感数据文件
-*.env.local    # 本地覆盖配置
-
-# ============== 其他常见忽略项 ==============
-.htaccess      # Web 服务器配置（若需自定义）
-dump.rdb       # Redis 持久化文件
-*.bak           # 备份文件
-coverage/       # 测试覆盖率报告
+### Mac OS ###
+.DS_Store
