--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -1,5 +1,16 @@
 spring:
   application:
     name: user
+  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/user-permission-system?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+#    username: root
+#    password: 123456
+    driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
+    url: jdbc:shardingsphere:classpath:shardingsphere-config-dev.yaml
 server:
   port: 8090
+
+mybatis-plus:
+  #标注待解析的mapper的xml文件位置
+  mapper-locations: classpath:mapper/*.xml
