feature: 用户服务引入redis依赖

--- a/user/src/main/resources/application.yaml
+++ b/user/src/main/resources/application.yaml
@@ -8,6 +8,11 @@ spring:
 #    password: 123456
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
     url: jdbc:shardingsphere:classpath:shardingsphere-config-dev.yaml
+  redis:
+    host: localhost
+    port: 6379
+    database: 5
+
 server:
   port: 8090
 
